[package]
name = "future-chaining-2"
version = "0.1.0"
authors = ["apiraino <apiraino@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
tokio = "0.1.22"
hyper = "0.12.33"
hyper-tls = "0.3.2"
